dev: done navigation bar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,35 @@
 </head>
 
 <body>
-  <i class="ph-duotone ph-map-pin" style="font-size: 24px; color: var(--brand-color)"></i>
-  <i class="ph-duotone ph-airplane-tilt" style="font-size: 24px; color: var(--brand-color)"></i>
-  <i class="ph-duotone ph-image" style="font-size: 24px; color: var(--brand-color)"></i>
-  <i class="ph ph-magnifying-glass" style="font-size: 24px"></i>
+  <div class="bg-surface-color">
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="assets/Logo.svg" alt="">
+      </a>
+      <ul id="primary-menu">
+        <li>
+          <a href="#">
+            <i class="ph ph-magnifying-glass" style="font-size: 24px"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Explorar
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Minhas viagens
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="http://github.com/leonardondev.png" alt="Imagem do Leonardo">
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </body>
 
 </html>
