--- a/index.html
+++ b/index.html
@@ -36,12 +36,41 @@
         </li>
         <li>
           <a href="#">
-            <img src="http://github.com/leonardondev.png" alt="Imagem do Leonardo">
+            <img src="assets/ProfileImg.jpg" alt="Imagem de Isabela Torres">
           </a>
         </li>
       </ul>
     </nav>
+
+    <header>
+      <div class="container">
+        <div id="profile">
+          <img src="assets/ProfileImg.jpg" alt="Imagem de Isabela Torres">
+          <div class="description">
+            <h1>Isabela Torres</h1>
+            <p>Amante de viagens, cultura e gastronomia. 🌍✈️<br />
+              Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso
+              planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+          </div>
+        </div>
+        <ul id="info">
+          <li>
+            <i class="ph-duotone ph-map-pin"></i>
+            <span>São Paulo, Brazil</span>
+          </li>
+          <li>
+            <i class="ph-duotone ph-airplane-tilt"></i>
+            <span>37 países</span>
+          </li>
+          <li>
+            <i class="ph-duotone ph-image"></i>
+            <span>240 fotos</span>
+          </li>
+        </ul>
+      </div>
+    </header>
   </div>
+
 </body>
 
 </html>
