dev: done main gallery

--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
     </header>
   </div>
 
+  <main class="container">
+    <img src="assets/Image01.png" alt="...">
+    <img src="assets/Image02.png" alt="...">
+    <img src="assets/Image03.png" alt="...">
+    <img src="assets/Image04.png" alt="...">
+    <img src="assets/Image05.png" alt="...">
+    <img src="assets/Image06.png" alt="...">
+    <img src="assets/Image07.png" alt="...">
+    <img src="assets/Image08.png" alt="...">
+    <img src="assets/Image09.png" alt="...">
+    <img src="assets/Image10.png" alt="...">
+    <img src="assets/Image11.png" alt="...">
+    <img src="assets/Image12.png" alt="...">
+  </main>
+
 </body>
 
 </html>
