--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
     <img src="assets/Image12.png" alt="...">
   </main>
 
+  <footer class="container">
+    <span>Travelgram &copy; 2024</span>
+    <div>
+      <a href="#">Termos de uso</a>
+      <a href="#">Política de privacidade</a>
+    </div>
+  </footer>
+
 </body>
 
 </html>
